@@ -40,6 +40,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #10859: Make ``contextlib.GeneratorContextManager`` officially
+  private by renaming it to ``_GeneratorContextManager``.
+
 - Issue #10042: Fixed the total_ordering decorator to handle cross-type
   comparisons that could lead to infinite recursion.
 
